<resources>
    <string name="app_name">Lno0x0C</string>
    <string name="pnoi_phone">Pnoi Phone</string>
    <string name="action_delete_all_entries">Delete all entries</string>
    <string name="action_dummy_profile">Add test profile</string>
    <string name="action_info">Info</string>
    <string name="profile_name">Profile name</string>
    <string name="example_year">56 years</string>
    <string name="example_gender">female</string>
    <string name="example_name">Profile name</string>
    <string name="category_overview">Overview</string>
    <string name="hint_profile_name">Name</string>
    <string name="allowed_name_chars">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz</string>
    <string name="hint_profile_age">Age</string>
    <string name="unit_profile_age">years</string>
    <string name="category_gender">Gender</string>
    <string name="category_measurement">Measurement</string>
    <string name="hint_profile_height">Height</string>
    <string name="unit_profile_height">cm</string>
    <string name="hint_profile_weight">Weight</string>
    <string name="unit_profile_weight">kg</string>
    <string name="editor_info">*changes must be saved</string>
    <string name="next_button_text">Next</string>
    <string name="action_save">Save</string>
    <string name="action_delete2">Delete</string>
    <string name="gender_male">male</string>
    <string name="gender_female">female</string>
    <string name="record_loc_info">*lungs as seen from behind</string>
    <string name="timer_init">00:00:00</string>
    <string name="lung_locations">Lung locations</string>
    <string name="record_button_text">Record</string>
    <string name="loc_desc_init">Left Upper Lobe</string>
    <string name="bluetooth">blutooth</string>
    <string name="bluetooth_download">download</string>
    <string name="new_record">New record</string>
    <string name="bluetooth_disconnect">Disconnect</string>
    <string name="connect_to_pnoi">Connect to Pnoi</string>
    <string name="rec_activity_button_text_stop">Stop</string>
    <string name="record_activity_rec_button_record">Record</string>
    <string name="record_activity_record_done">Done</string>
</resources>