<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CatalogActivity">

    <item
        android:id="@+id/action_record_bluetooth"
        android:icon="@drawable/bluetooth_24"
        android:contentDescription="@string/bluetooth"
        app:showAsAction="ifRoom"
        android:title="@string/bluetooth" />
    <item
        android:id="@+id/action_record_download_record"
        android:title="@string/bluetooth_download"
        android:icon="@drawable/bluetooth_download_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_record_connect_pnoi"
        android:title="@string/connect_to_pnoi"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_record_new_record"
        android:title="@string/new_record"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_record_bluetooth_disconnect"
        android:title="@string/bluetooth_disconnect"
        app:showAsAction="never" />

</menu>