<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:alpha="0.7"
        android:fontFamily="sans-serif-light"
        android:text="@string/record_loc_info"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/text_view_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <TextView
        android:id="@+id/text_view_record_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_record_timer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:paddingTop="16dp"
        android:paddingBottom="32dp"
        android:text="@string/timer_init"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_record_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/round_border"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/record_button_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_record_timer">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/lno_round_logo"
            android:alpha="0.65"
            android:contentDescription="@string/lung_locations" />

        <Button
            android:id="@+id/button_left_upper_lung"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp"
            android:background="@drawable/round_border"
            android:backgroundTint="@color/colorUnselected"
            android:onClick="onClickLUL" />

        <Button
            android:id="@+id/button_right_upper_lung"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
            android:background="@drawable/round_border"
            android:backgroundTint="@color/colorUnselected"
            android:onClick="onClickRUL" />

        <Button
            android:id="@+id/button_left_lower_lung"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:background="@drawable/round_border"
            android:backgroundTint="@color/colorUnselected"
            android:onClick="onClickLLL" />

        <Button
            android:id="@+id/button_right_lower_lung"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:background="@drawable/round_border"
            android:backgroundTint="@color/colorUnselected"
            android:onClick="onClickRLL" />

    </RelativeLayout>

    <TextView
        android:id="@+id/text_view_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/loc_desc_init"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/button_record_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>